<resources>
    <string name="app_name">HWProject</string>
    <string name="sign_up_btn">GO TO SIGN UP SCREEN</string>
    <string name="pdf_btn">GO TO PDF STRING</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="open_pdf_btn">Open pdf file</string>
    <string name="channel_name">Menu notifier</string>
    <string name="channel_description">Notifier</string>
    <string name="search_hint">Search content</string>
    <string name="go_to_menu_button">GO TO MENU</string>
    <string name="go_to_searcher_button">GO TO SEARCHABLE ACTIVITY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sendIntentButtonString">Send Intent</string>
    <string name="go_to_foreground_service">Foreground Service Activity</string>
    <string name="sign_up_title_text">Please sign up</string>
    <string name="login_failed">Sign in failed</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="welcome">Welcome aboard, </string>
    <string name="prompt_email">Please enter username or email</string>
    <string name="prompt_password">Please, enter the password</string>
    <string name="action_sign_in_short">password</string>
    <string name="action_sign_in">Please, sign in</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_user_button_string">CREATE USER</string>
    <string name="user_name_label">Username:</string>
    <string name="user_email_label">Email:</string>
    <string name="user_password_label">Password</string>
    <string name="bound_service_call_button">Click to call a function\n from bound service</string>
    <string name="switch_user_comment_button_text">SWITCH USERS/COMMENTS</string>

    <string-array name="gender">
        <item>MALE</item>
        <item>FEMALE</item>
        <item>OTHER</item>
    </string-array>
</resources>